--- a/src/components/PersonDetails/PersonDetails.module.css
+++ b/src/components/PersonDetails/PersonDetails.module.css
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: flex-start;
   background-color: rgb(197, 197, 197);
+  padding: 20px;
 }
 
 .poster {
@@ -16,7 +17,6 @@
   text-indent: 100%;
   border-radius: 3px;
   object-fit: cover;
-  padding: 10px;
 }
 
 .title {
@@ -71,66 +71,6 @@
 
 .overviewText {
   text-align: left;
-}
-
-.info {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin-bottom: 30px;
-}
-
-.infoItem {
-  list-style: none;
-}
-
-.infoItem:not(:last-child) {
-  margin-right: 50px;
-}
-
-.linkInfo {
-  display: inline-block;
-  padding: 20px 0;
-  font-size: 20px;
-  font-weight: 700;
-  text-decoration: none;
-}
-
-.activeLinkInfo {
-  color: red;
-}
-
-.linkInfo:hover,
-.linkInfo:focus {
-  color: red;
-}
-
-.button {
-  position: absolute;
-  top: -40px;
-  left: 115px;
-  padding: 4px 10px;
-  margin: 0 auto;
-  border-radius: 2px;
-  background-color: #3f51b5;
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  text-align: center;
-  display: block;
-  color: #fff;
-  border: 0;
-  text-decoration: none;
-  cursor: pointer;
-  font-family: inherit;
   font-size: 14px;
-  line-height: 24px;
-  font-style: normal;
-  font-weight: 500;
-  min-width: 100px;
-  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
-    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-}
-
-.button:hover,
-.button:focus {
-  background-color: #303f9f;
+  margin-top: 10px;
 }
