--- a/src/components/ActorsDetails/ActorsDetails.module.css
+++ b/src/components/ActorsDetails/ActorsDetails.module.css
@@ -8,7 +8,7 @@
 
 .item {
   display: flex;
-  flex-basis: calc((100% - 5 * 10px) / 5);
+  flex-basis: calc((100% - 8 * 10px) / 8);
   margin: 10px;
   border-radius: 2px;
 }
@@ -18,7 +18,8 @@
 }
 
 .card {
-  height: 395px;
+  height: 300px;
+  width: 200px;
   cursor: pointer;
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
