--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -2,7 +2,7 @@
   padding: 8px 16px;
   margin: 0 auto;
   border-radius: 2px;
-  background-color: #3f51b5;
+  background-color: rgb(60 180 231);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
   display: block;
@@ -22,5 +22,5 @@
 
 .button:hover,
 .button:focus {
-  background-color: #303f9f;
+  background-color: rgb(4 133 187);
 }
