--- a/src/components/FilmDetails/FilmDetails.module.css
+++ b/src/components/FilmDetails/FilmDetails.module.css
@@ -14,7 +14,7 @@
   display: block;
   overflow: hidden;
   margin-right: 100px;
-  min-height: 320px;
+  height: 500px;
   white-space: nowrap;
   text-indent: 100%;
   border-radius: 3px;
@@ -87,8 +87,13 @@
   text-align: left;
 }
 
+.overviewTitle {
+  margin-bottom: 20px;
+}
+
 .overviewText {
   text-align: left;
+  margin-bottom: 40px;
 }
 
 .info {
@@ -108,19 +113,29 @@
 
 .linkInfo {
   display: inline-block;
-  padding: 20px 0;
-  font-size: 20px;
   font-weight: 700;
   text-decoration: none;
+  text-transform: uppercase;
+  padding: 23px 15px;
+  font-size: 18px;
+  color: rgb(0 0 0);
+  line-height: 14px;
+  letter-spacing: 0.4px;
 }
 
 .activeLinkInfo {
-  color: red;
+  color: rgb(60 180 231);
 }
 
 .linkInfo:hover,
 .linkInfo:focus {
-  color: red;
+  color: rgb(60 180 231);
+}
+
+.buttonContainer {
+  width: 180px;
+  margin-right: auto;
+  margin-bottom: 30px;
 }
 
 .button {
@@ -130,7 +145,7 @@
   padding: 4px 10px;
   margin: 0 auto;
   border-radius: 2px;
-  background-color: #3f51b5;
+  background-color: rgb(60 180 231);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
   display: block;
@@ -150,5 +165,5 @@
 
 .button:hover,
 .button:focus {
-  background-color: #303f9f;
+  background-color: rgb(4 133 187);
 }
