--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -18,9 +18,14 @@
   padding: 10px 25px;
   cursor: pointer;
   color: #fff;
-  background-color: rgb(0 0 139);
+  background-color: rgb(60 180 231);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-color: transparent;
   transition: 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.button:hover,
+.button:focus {
+  background-color: rgb(4 133 187);
 }
