--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,6 @@
 .header {
   width: 100%;
-  box-shadow: 13px 13px 25px -5px rgba(34, 60, 80, 0.3);
+  flex: 0 0 auto;
+  box-shadow: 0px -7px 33px -3px rgba(236, 236, 236, 0.2);
+  background-color: #000;
 }
