--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,7 +1,24 @@
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 0;
+}
+
 .nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: 160px;
+}
+
+.logo {
+  background-image: url(../../images/logo.svg);
+  width: 200px;
+  height: 50px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .list {
@@ -21,14 +38,18 @@
 .link {
   position: relative;
   display: inline-block;
-  padding: 20px 0;
-  font-size: 20px;
-  font-weight: 700;
+  font-weight: 400;
   text-decoration: none;
+  text-transform: uppercase;
+  padding: 23px 15px;
+  font-size: 18px;
+  color: rgb(255 255 255);
+  line-height: 14px;
+  letter-spacing: 0.4px;
 }
 
 .activeLink {
-  color: red;
+  color: rgb(60 180 231);
 }
 
 .link::after,
@@ -36,10 +57,10 @@
   content: "";
   position: absolute;
   width: 100%;
-  bottom: 10px;
+  top: 10px;
   left: 0;
   height: 2px;
-  background-color: red;
+  background-color: rgb(60 180 231);
   opacity: 0;
 }
 
@@ -49,10 +70,11 @@
 
 .link:hover,
 .link:focus {
-  color: red;
+  color: rgb(125 125 125);
 }
 
 .link:hover::after,
 .link:focus::after {
   opacity: 1;
+  background-color: rgb(125 125 125);
 }
