--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 html {
   box-sizing: border-box;
-  width: 100vw;
+  width: 100%;
   overflow-x: hidden;
+  height: 100%;
 }
 
 body {
@@ -11,6 +12,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(233 233 233);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 code {
