добавил карусель для фото

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,10 @@ body {
   height: 100%;
 }
 
+.modal-open {
+  overflow: hidden;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
